--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mcsrranked-matches-counter",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,9 +8,7 @@
     "deploy": "vercel deploy --prod"
   },
   "dependencies": {
-    "node-fetch": "^3.3.1"
-  },
-  "devDependencies": {
-    "vercel": "^29.1.1"
+    "node-fetch": "^3.3.1",
+    "vercel": "^37.9.0"
   }
 }
