--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.1",
-    "vercel": "^37.9.0"
+    "nodemon": "^3.1.7"
   }
 }
