--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.6.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.51.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.53.0",
+    "@opentelemetry/resources": "^1.26.0",
+    "@opentelemetry/sdk-node": "^0.53.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
