--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@opentelemetry/resources": "^1.26.0",
     "@opentelemetry/sdk-node": "^0.53.0",
     "@opentelemetry/semantic-conventions": "^1.27.0",
+    "better-sqlite3": "^11.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
