--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "env=development; nodemon server.js"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.6.0",
